# interactive-choice-mcp

./: .gitignore  =7.4  AGENTS.md  README.md  README.zh.md  main.py  pyproject.toml  server.py
.github/skills/software-architecture/: SKILL.md
choice/: __init__.py  i18n.py  interaction_store.py  logging.py  models.py  orchestrator.py  response.py  storage.py  terminal.py  validation.py  web.py
choice/templates/: choice.html  dashboard.html
choice/terminal/: __init__.py  client.py  runner.py  session.py  ui.py
choice/web/: __init__.py  server.py  session.py  templates.py
openspec/: project.md
src/: __init__.py  i18n.py  interaction_store.py  logging.py  models.py  orchestrator.py  response.py  server.py  storage.py  validation.py
src/core/: __init__.py  models.py  orchestrator.py  response.py  validation.py
src/infra/: __init__.py  i18n.py  logging.py  paths.py  storage.py
src/mcp/: __init__.py  response_formatter.py  tools.py
src/store/: __init__.py  interaction_store.py
src/templates/: choice.html
src/terminal/: __init__.py  client.py  runner.py  session.py  ui.py
src/web/: __init__.py  bundler.py  server.py  session.py  templates.py
tests/: README.md  conftest.py  test_i18n.py  test_interaction_list.py  test_interaction_store.py  test_logging.py  test_models.py  test_orchestrator.py  test_scaffold_imports.py  test_server.py  test_storage.py  test_terminal_client.py  test_web_timeout.py
tests/integration/: test_interaction_terminal.py  test_interaction_web.py  test_interactive.py  test_server.py
tests/unit/: test_scaffold_imports.py
(+98 files in other folders)
