[project]
name = "interactive-choice-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.127.0",
    "fastmcp>=2.14.1",
    "httpx>=0.27.0",
    "questionary>=2.1.1",
    "uvicorn>=0.40.0",
    "pytest>=7.4",
    "marked>=0.9.1",
    "markdown>=3.10",
]
