[project]
name = "interactive-choice-mcp"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.127.0",
    "fastmcp>=2.14.1",
    "httpx>=0.27.0",
    "questionary>=2.1.1",
    "uvicorn>=0.40.0",
    "pytest>=7.4",
    "pytest-asyncio>=0.23.0",
    "websockets>=13.0",
    "marked>=0.9.1",
    "markdown>=3.10",
]

[project.scripts]
interactive-choice-mcp = "src.server:mcp.run"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]
where = ["."]

[tool.setuptools.package-data]
src = [
    "web/templates/*.html",
    "web/frontend/**/*.css",
    "web/frontend/**/*.js",
    "web/frontend/manifest.json",
]
